<?xml version="1.0"?>
<package>
  <name>walker</name>
  <version>0.0.0</version>
  <description>The walker package</description>

  <maintainer email="minglong_l@163.com">Minglong</maintainer>

  <license>BSD</license>

  <author email="minglong_l@163.com">Minglong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
